<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, SimpleManagerActivity!</string>
    <string name="app_name">AppManager</string>
    <string name="count">已选中0项</string>
    <string name="selectall">全选</string>
    <string name="abselect">反选</string>
    <string name="kill">clear</string>
    <string name="install_text">安装插件可以使应用永远不会被系统杀死</string>
    <string name="clear_text">点击按钮清除正在运行的程序</string>
    <string name="install">install</string>
    <string name="uninstall">uninstall</string>
    <string name="action_help">help</string>
    <string name="action_about">about</string>
    <string name="action_settings">setting</string>
    <string name="action_feedback">feedback</string>
    <string name="action_help_msg">simple app for force stop apps</string>
    <string name="action_about_msg">simple app for force stop apps</string>
    <string name="except">the selected item wil not showing</string>
    <string name="except_text">被选中的项将不会显示在被杀名单中</string>
    <string name="screenoff_setting_text">关闭屏幕时清理内存</string>
    <string name="float_view_setting_text">显示浮动气泡</string>
    <string name="screenoff_setting">选择清理内存的快捷方式</string>

</resources>