<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.codebag.bag.MainActivity" >

    <item
        android:id="@+id/action_help"
        android:orderInCategory="1"
        android:title="@string/action_help"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="2"
        android:title="@string/action_about"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="3"
        android:icon="@drawable/setting"
        android:showAsAction="always"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_feedback"
        android:orderInCategory="4"
        android:title="@string/action_feedback"/>

</menu>