<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:text="@string/screenoff_setting" />

    <RadioGroup
        android:id="@+id/cleansetting"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/screenoffsetting"
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio"
            android:gravity="center"
            android:text="@string/screenoff_setting_text" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="?android:attr/listDivider" />

        <RadioButton
            android:id="@+id/floatsetting"
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio"
            android:gravity="center"
            android:checked="true"
            android:text="@string/float_view_setting_text" />
    </RadioGroup>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:text="@string/except_text" />

    <ListView
        android:id="@+id/setting_list"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:animationCache="true"
        android:divider="@android:color/black"
        android:fadingEdge="none"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:fastScrollEnabled="true"
        android:layoutAnimation="@anim/animationlayout"
        android:scrollbarStyle="outsideInset"
        android:scrollingCache="false" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:text="@string/install_text" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:background="@android:color/black" >

        <Button
            android:id="@+id/install"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="30dp"
            android:background="@layout/button_bg"
            android:onClick="onClick"
            android:text="@string/install" />

        <Button
            android:id="@+id/uninstall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="30dp"
            android:background="@layout/button_bg"
            android:onClick="onClick"
            android:text="@string/uninstall" />
    </FrameLayout>

</LinearLayout>